Fixed main video title clipped

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -112,7 +112,6 @@
     border-radius: 6px;
     margin-bottom: 8px;
     width: 100%;
-    max-height: 266px;
     box-sizing: border-box;
     overflow: hidden;
 
@@ -130,7 +129,6 @@
     .title {
       font-weight: 500;
       font-size: 1em;
-      max-height: 40px;
       line-height: 30px;
       color: #333333;
       overflow: hidden;
